Correction of Fig 3 caption

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -413,7 +413,7 @@ By selecting a part of the trajectory using this representation, the user is aut
 \begin{figure*}[thb]
 	\centering
   \includegraphics[width=0.95\textwidth]{img/overview.png}
-  \caption{\label{fig:overview} Overview of the proposed system. 1 -- overview of the whole loaded trajectory, 2 -- scatterplot matrix plotting different attributes of the ligand trajectory, 3 -- bar charts and line representation showing ligand-lining amino acids, 4 -- spatial representation of the trajectory.}
+  \caption{\label{fig:overview} Overview of the proposed system. 1 -- overview of the whole loaded trajectory, 2 -- scatterplot matrix plotting different attributes of the ligand trajectory, 3 -- bar chart showing temporal changes of selected ligand properties accompanied by line representation of ligand-lining amino acids presence over time, 4 -- spatial representation of the trajectory.}
 \end{figure*}
 
 Among the other supported views belong the scatterplot matrix (Figure~\ref{fig:overview} -- 2) enabling to explore different attributes of the ligand and its trajectory.
