--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -691,7 +691,7 @@ Even though the amino acid view contained the list of all amino acids surroundin
 This was enabled thanks to the ability of the view to color individual amino acids based on their properties. 
 Here the biochemists selected the green amino acids (asparagine with ID 38 and aspartic acid with ID 103). 
 As can be seen in Figure~\ref{fig:case_hydro_vs_dist_3d} the selected amino acids exactly correspond to the estimated active site in the protein.
-This was also confirmed by the bar chart representation in Figure~\ref{fig:case_hydro_vs_dist_bar} where the majority of bars have TODO red color which corresponds to the closeness of the ligand to the active site.
+This was also confirmed by the bar chart representation in Figure~\ref{fig:case_hydro_vs_dist_bar} where the majority of bars have red color which corresponds to the closeness of the ligand to the active site.
 
 
 \begin{figure}[tb]
