--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -408,7 +408,7 @@ Therefore, only a fraction of the trajectory captures its transportation to the 
 \section*{System Overview}
 Our proposed solution consists of several linked views covering individual steps of the exploration workflow (see Figure~\ref{fig:overview}). 
 In the first part, the user is provided with the overview representation of the whole loaded trajectory (Figure~\ref{fig:overview} -- 1). 
-This simple 1D representation encodes different routes of the ligand -- orange color highlights the parts of the trajectory where the ligand is inside the protein, white color encodes the situation when the ligand is outside the protein, and blue denotes for the situation when the ligand is close to the protein surface.
+This simple 1D representation encodes different routes of the ligand -- orange color highlights the parts of the trajectory where the ligand is inside the protein, white color encodes the situation when the ligand is outside the protein, and blue stands for the situation when the ligand is close to the protein surface.
 Red color shows the time portions when the ligand was close to the active site.
 By selecting a part of the trajectory using this representation, the user is automatically navigated to this selected part and all following representations show only this part.
 
@@ -620,7 +620,7 @@ Utilizing this view the biochemist can immediately see that the whole simulation
 These parts are divided by two blue and white blocks signalizing that the ligand was moving near to the protein surface (blue) or even entirely left the protein (white).
  
 The mentioned color mapping on the simulation overview suggests that in this particular simulation the ligand started in the active site, then traveled towards the protein surface, and finally left the molecule.
-After spending some time outside it found again its way into a protein tunnel and traveled back to the active site.
+After spending some time outside it found again its way into a protein tunnel and traveled back to the active side.
 The whole process is then repeated again while this time the ligand spent significantly more time outside the protein or nearby its surface and returned just for last few hundreds of time steps. 
 
 After the first evaluation of the overall ligand trajectory the biochemists stated that they would like to evaluate the interactions between the ligand and protein in more detail using the following scenario (see Figure~\ref{fig:case_overview}). 
@@ -795,7 +795,7 @@ Here the biochemists immediately spotted that both TCP--294 and TCP--296 were ev
 \end{figure}
 
 In case of the TCP--294, the overview is mostly blue (indicating the ligand closeness to the surface) due to the fact that the site where this ligand binds is relatively shallow and close to the surface.
-TCP--295 reached the deeply buried active site first and hence filled the empty space around it.
+TCP--296 reached the deeply buried active site first and hence filled the empty space around it.
 This can be seen either from the distance scatterplots (see Figures~\ref{fig:tcp3_distances}(a)~and~\ref{fig:tcp3_distances}(c)) or directly from the 3D view (see Figure~\ref{fig:tcp3_3D}).
 %First, obviously distance of TCP--295 from active site dropped much sooner. 
 %Second, in closeup (see Figure~\ref{fig:tcp3_distance_comparison}) we can see that the real distance are  different.  
